# hatred2d

./: Cargo.toml  LICENSE  README.md
example/: init.luau
example/hatred/: graphics.luau
src/: loader.rs  main.rs
src/modules/: graphics.rs  index.rs  mod.rs
static/: .luaurc
static/hatred/: color.luau  graphics.luau  init.luau
